Fixed floated blockquotes when they use text wrap. Had to change them to span tags. I mean, it's so obvious of course.

--- a/app/stylesheets/_open-sans.scss
+++ b/app/stylesheets/_open-sans.scss
@@ -39,11 +39,13 @@
 	}
 	
 	.column-8 {
-		blockquote.floated-blockquote {
-			padding-top: 0;
-			padding-bottom: 0;
+		span.floated-blockquote {
+			padding-top: 2px;
+			padding-bottom: 8px;
 			margin-top: 0;
-			margin-bottom: 20px;
+			margin-bottom: 10px;
+			font-size: 20px;
+			line-height: 30px;
 		}
 	}
 
