--- a/app/stylesheets/_vollkorn.scss
+++ b/app/stylesheets/_vollkorn.scss
@@ -39,19 +39,15 @@
 	}
 	
 	.column-8 {
-		blockquote.floated-blockquote {
-			padding-top: 2px;
-			padding-bottom: 0;
+		span.floated-blockquote {
+			padding-top: 4px;
+			padding-bottom: 6px;
 			margin-top: 0;
-			margin-bottom: 18px;
+			margin-bottom: 10px;
 			font-family: 'Vollkorn', Georgia, 'Times New Roman', serif;
+			font-size: 20px;
+			line-height: 30px;
 		}
-	}
-	.webkit blockquote.floated-blockquote {
-		padding-top: 1px;
-		padding-bottom: 0;
-		margin-top: 0;
-		margin-bottom: 19px;
 	}
 
 	ul,
